# gamemath

./: Cargo.toml  LICENSE  README.md
src/: curve.rs  decomposition.rs  lib.rs  mat2.rs  mat3.rs  mat4.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
src/private/: num.rs
