[package]
name = "gamemath"
version = "0.3.0"
authors = ["David \"Dregel\" Bengtsson <david@witchcult.se>"]
description = "A simple math library for game development, written in Rust."
keywords = ["math", "game", "linalg", "vector", "matrix"]
license ="MIT"
repository = "https://github.com/WitchcultGames/gamemath"

[dependencies]
